@@ -35,6 +35,7 @@ Version 5.2.0 - DEV
  - Changed semantics of dj_file_contents_get() optional size argument.
  - Make storage and display limits for output/error files configurable.
  - Changed special case handling of color name/hex conversion functions.
+ - Add option -y to force yes to some make_chroot script questions.
 
 Version 5.1.0 - 7 December 2015
 -------------------------------
